--- a/Courses/Cloud/CLindex.html
+++ b/Courses/Cloud/CLindex.html
@@ -245,48 +245,66 @@
 
     <!-- Courses Section -->
     <div id="courses">
-        <div class="container">
-            <!-- Azure Course Card -->
-            <div class="course-card">
-                <img src="azure.jpg" alt="Azure">
-                <div class="course-card-content">
-                    <h3>Microsoft Azure</h3>
-                    <p>"Unlock the power of Microsoft Azure for limitless cloud innovation and security!"</p>
-                    <a href="../../index.htm#contact-section">Enroll Now</a>
-                </div>
-            </div>
+  <div class="container">
 
-            <!-- Intune Course Card -->
-            <div class="course-card">
-                <img src="intune.jpg" alt="Intune">
-                <div class="course-card-content">
-                    <h3>Microsoft Intune</h3>
-                    <p>"Empower IT management with Microsoft Intune—secure, control, and streamline devices!"</p>
-                    <a href="../../index.htm#contact-section">Enroll Now</a>
-                </div>
-            </div>
-
-            <!-- O365 Course Card -->
-            <div class="course-card">
-                <img src="365.jpg" alt="O365">
-                <div class="course-card-content">
-                    <h3>Microsoft Office 365 (formerly Office 365)</h3>
-                    <p>"Master Microsoft 365—enhance your skills in productivity, collaboration, and security!"</p>
-                    <a href="../../index.htm#contact-section">Enroll Now</a>
-                </div>
-            </div>
-
-            <!-- Teams Course Card -->
-            <div class="course-card">
-                <img src="teams.jpg" alt="Teams">
-                <div class="course-card-content">
-                    <h3>Microsoft Teams</h3>
-                    <p>"Learn Microsoft Teams—enhance virtual collaboration, productivity, and remote work efficiency!"</p>
-                    <a href="../../index.htm#contact-section">Enroll Now</a>
-                </div>
-            </div>
+    <!-- Azure Course Card -->
+    <a href="Stage3.html" class="course-link">
+      <div class="course-card">
+        <img src="azure.jpg" alt="Azure">
+        <div class="course-card-content">
+          <h3>Microsoft Azure</h3>
+          <p>"Unlock the power of Microsoft Azure for limitless cloud innovation and security!"</p>
         </div>
-    </div>
+      </div>
+    </a>
+
+    <!-- Intune Course Card -->
+    <a href="Stage3.html" class="course-link">
+      <div class="course-card">
+        <img src="intune.jpg" alt="Intune">
+        <div class="course-card-content">
+          <h3>Microsoft Intune</h3>
+          <p>"Empower IT management with Microsoft Intune—secure, control, and streamline devices!"</p>
+        </div>
+      </div>
+    </a>
+
+    <!-- O365 Course Card -->
+    <a href="Stage3.html" class="course-link">
+      <div class="course-card">
+        <img src="365.jpg" alt="O365">
+        <div class="course-card-content">
+          <h3>Microsoft Office 365</h3>
+          <p>"Master Microsoft 365—enhance your skills in productivity, collaboration, and security!"</p>
+        </div>
+      </div>
+    </a>
+
+    <!-- Teams Course Card -->
+    <a href="Stage3.html" class="course-link">
+      <div class="course-card">
+        <img src="teams.jpg" alt="Teams">
+        <div class="course-card-content">
+          <h3>Microsoft Teams</h3>
+          <p>"Learn Microsoft Teams—enhance virtual collaboration, productivity, and remote work efficiency!"</p>
+        </div>
+      </div>
+    </a>
+
+    <!-- Defender Course Card -->
+    <a href="Stage3.html" class="course-link">
+      <div class="course-card">
+        <img src="defender.png" alt="Defender">
+        <div class="course-card-content">
+          <h3>Microsoft Defender</h3>
+          <p>"Protect and manage endpoints with advanced Microsoft Defender capabilities."</p>
+        </div>
+      </div>
+    </a>
+
+  </div>
+</div>
+
 
     <!-- Why Choose Cloud Section -->
     <div class="why-choose-cloud">
@@ -344,7 +362,7 @@
             <a href="https://www.instagram.com/uylearn/" target="_blank">
               <img src="insta.jpg" alt="Instagram">
             </a>
-            <a href="https://www.linkedin.com" target="_blank">
+            <a href="http://www.linkedin.com/in/until-you-learn-39000b364" target="_blank">
               <img src="linkdin.jpg" alt="LinkedIn">
             </a>
           </div>
