--- a/Courses/Ethical Hacking/ETHacking.html
+++ b/Courses/Ethical Hacking/ETHacking.html
@@ -336,7 +336,7 @@
         <a href="https://www.instagram.com/uylearn/" target="_blank">
           <img src="insta.jpg" alt="Instagram">
         </a>
-        <a href="https://www.linkedin.com" target="_blank">
+        <a href="http://www.linkedin.com/in/until-you-learn-39000b364" target="_blank">
           <img src="linkdin.jpg" alt="LinkedIn">
         </a>
       </div>
