--- a/Courses/Sccm/SCCM.html
+++ b/Courses/Sccm/SCCM.html
@@ -255,7 +255,7 @@
         <a href="https://www.instagram.com/uylearn/" target="">
           <img src="insta.jpg" alt="">
         </a>
-        <a href="https://www.linkedin.com" target="">
+        <a href="http://www.linkedin.com/in/until-you-learn-39000b364" target="">
           <img src="linkdin.jpg" alt="">
         </a>
       </div>
